Fix bug in coordinator-based compaction duty and simulator